--- a/index.html
+++ b/index.html
@@ -1,45 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My trip</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>ANYWAYS</h1>
-    <H2>Road trip around Tanzania</H2>
-    <hr>
-    <table>
-        <tr>
-            <td>OCT 2-6 <br>mo-fr(4 days)</td>
-            <td>Dar es salaam</td>
-           
-        </tr>
-        <tr>
-            <td>Oct 7-8 <br>sa=su(2 days)</td>
-            <td>Morogoro</td>
-        </tr>
-        <tr>
-            <td>Oct 9 <br>mo(1 days)</td>
-            <td>Mbeya</td>
-        </tr>
-        <tr>
-            <td>Oct 10=12<br>tu=th(3 days)</td>
-            <td>Kigoma</td>
-        </tr>
-        <tr>
-            <td>Oct 13-nov 5 <br>fr-su(2 days)</td>
-            <td>Mwanza</td>
-        </tr>
-        <tr>
-            <td>Nov 6-20<br>mo-mu(2 days)</td>
-            <td>Arusha</td>
-        </tr>
-
-    </table>
-    <hr>
-    <p>total: 1.5 months</p>
+    <h1>ANYWAYS →</h1>
+    <main>
+        <H2>Road trip around Tanzania</H2>
+        <hr>
+        <table>
+            <tr>
+                <td>
+                    <span class="date">Oct 2-6</span><br>
+                    <span class="duration">mo-fr (4 days)</span>
+                </td>
+                <td class="destination">Dar es Salaam</td>
+            </tr>
+            <tr>
+                <td>
+                    <span class="date">Oct 7-8</span><br>
+                    <span class="duration">sa-su (2 days)</span>
+                </td>
+                <td class="destination">Morogoro</td>
+            </tr>
+            <tr>
+                <td>
+                    <span class="date">Oct 9</span><br>
+                    <span class="duration">mo (1 day)</span>
+                </td>
+                <td class="destination">Mbeya</td>
+            </tr>
+            <tr>
+                <td>
+                    <span class="date">Oct 10-12</span><br>
+                    <span class="duration">tu-th (3 days)</span>
+                </td>
+                <td class="destination">Kigoma</td>
+            </tr>
+            <tr>
+                <td>
+                    <span class="date">Oct 13-Nov 5</span><br>
+                    <span class="duration">fr-su (3.5 weeks)</span>
+                </td>
+                <td class="destination">Mwanza</td>
+            </tr>
+            <tr>
+                <td>
+                    <span class="date">Nov 6-20</span><br>
+                    <span class="duration">mo-mo (2 weeks)</span>
+                </td>
+                <td class="destination">Arusha</td>
+            </tr>
+        </table>
+        <hr>
+        <p class="total">total: <span class="value">1.5 months</span></p>
+    </main>
 </body>
 </html>
